Closed
Bug 1105867
Opened 11 years ago
Closed 11 years ago
Fix -Wunused-const-variable warnings-as-errors in nonunified build of dom/media/webm
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla37
| Tracking | Status | |
|---|---|---|
| firefox35 | --- | unaffected |
| firefox36 | --- | fixed |
People
(Reporter: cpeterson, Assigned: cpeterson)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
1.68 KB,
patch
|
kinetik
:
review+
|
Details | Diff | Splinter Review |
1. NS_PER_USEC and NS_PER_S are defined in both WebMReader.h and SoftwareWebMVideoDecoder.cpp, which causes these unused variable warnings:
> dom/media/webm/SoftwareWebMVideoDecoder.cpp:24:23: error: unused variable 'NS_PER_USEC' [-Werror,-Wunused-const-variable]
> dom/media/webm/SoftwareWebMVideoDecoder.cpp:25:23: error: unused variable 'NS_PER_S' [-Werror,-Wunused-const-variable]
2. WebMReader.h's defines NS_PER_S as a double, but SoftwareWebMVideoDecoder.cpp defines NS_PER_S as an unsigned (int). Which type is correct?
3. WebMReader.h is #included by both the SoftwareWebMVideoDecoder.h and SoftwareWebMVideoDecoder.cpp (and IntelWebMVideoDecoder.h and .cpp). This patch removes the redundant #includes from the .cpp files.
Attachment #8529946 -
Flags: review?(cpearce)
Comment 1•11 years ago
|
||
Comment on attachment 8529946 [details] [diff] [review]
webm_Wunused-const-variable.patch
Review of attachment 8529946 [details] [diff] [review]:
-----------------------------------------------------------------
-> Matthew...
Attachment #8529946 -
Flags: review?(cpearce) → review?(kinetik)
Comment 2•11 years ago
|
||
Comment on attachment 8529946 [details] [diff] [review]
webm_Wunused-const-variable.patch
Review of attachment 8529946 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks.
Attachment #8529946 -
Flags: review?(kinetik) → review+
| Assignee | ||
Comment 3•11 years ago
|
||
Comment 4•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in
before you can comment on or make changes to this bug.
Description
•