Bug 1105867 - Fix -Wunused-const-variable warnings-as-errors in nonunified build of dom/media/webm. r=kinetik